--- a/.github/workflows/auto_generate_m3u.yml
+++ b/.github/workflows/auto_generate_m3u.yml
@@ -2,8 +2,8 @@ name: "🎬 Auto Generate Combined Playlist"
 
 on:
   schedule:
-    # প্রতি ৩০ মিনিটে (UTC সময় অনুযায়ী, বাংলাদেশে +6 ঘন্টা)
-    - cron: "0,30 * * * *"
+    # প্রতি ৬ ঘণ্টা পরপর (বাংলাদেশ সময় অনুযায়ী)
+    - cron: "0 0,6,12,18 * * *"
   workflow_dispatch: {}    # চাইলে ম্যানুয়ালি রান করা যাবে
 
 permissions:
